Bug 421561 - Icon of Weather Report applet changes in system tray settings depending on visibility setting
Summary: Icon of Weather Report applet changes in system tray settings depending on vi...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Weather (other bugs)
Version First Reported In: 5.18.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-15 13:01 UTC by Patrick Silva
Modified: 2020-05-26 15:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.0
Sentry Crash Report:


Attachments
screen recording (2.64 MB, video/webm)
2020-05-15 13:01 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-15 13:01:39 UTC
Created attachment 128474 [details]
screen recording

SUMMARY
If visibility is set to "Disabled", icon of Weather Report applet is a sun.
Otherwise, another icon represents the Weather Report applet.
Watch the attached screen recording please.

EXPECTED RESULT
icon of Weather Report in system tray settings should be consistent.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.90
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0 rc2
Comment 1 Konrad Materka 2020-05-24 16:53:34 UTC
This is a feature:
Plasmoid.icon: needsConfiguration ? "configure" : generalModel.currentConditionIconName

Do you think icon should always remain the same, regardless of the state?
Comment 2 Patrick Silva 2020-05-24 17:00:05 UTC
(In reply to Konrad Materka from comment #1)
> Do you think icon should always remain the same, regardless of the state?
yes :)
Comment 3 Konrad Materka 2020-05-24 19:19:12 UTC
Then we have the same issue (inconsistent behavior) for Media Player and probably other applets.
Comment 4 Patrick Silva 2020-05-24 19:26:12 UTC
humm, icon of Media Player applet in systray settings is always the same on my system.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 5 Konrad Materka 2020-05-24 20:01:47 UTC
It has different icons for: default state, paying and paused. There is even a bug, icon is not available if media has cover (fixed: Bug 420197)
Comment 6 Patrick Silva 2020-05-24 20:28:01 UTC
yes, but this report is about the icon changing depending on its visibility setting.
Comment 7 Konrad Materka 2020-05-26 15:44:09 UTC
Git commit 04bd86e1e8d4c25855f06a683c8cdb327db4833d by Konrad Materka.
Committed on 25/05/2020 at 22:20.
Pushed by kmaterka into branch 'Plasma/5.19'.

[applets/systemtray] Consistent name/icon in System Tray settings

Summary:
Icon and title of entries in System Tray settings should not change when status changes.
Use only plugin's meta-data for consistent title and icon.

FIXED-IN: 5.19.0

Test Plan:
1. Check Weather or Media Player applets
2. Enbable/disable/change status
3. Icon and title should remain the same

M  +7    -13   applets/systemtray/systemtraymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/04bd86e1e8d4c25855f06a683c8cdb327db4833d