[applets/systemtray] Consistent name/icon in System Tray settings

Summary:
Icon and title of entries in System Tray settings should not change when status changes.
Use only plugin's meta-data for consistent title and icon.

BUG: 421561

FIXED-IN: 5.19.0

Test Plan:
1. Check Weather or Media Player applets
2. Enbable/disable/change status
3. Icon and title should remain the same